# mahoney-best

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
content/: example.md  home.md  index.md  robotopia.md  website.md
content/robotics/: abstraction.md  commands.md  controls.md  home.md  java.md  main.md
crates/autopixel/: .gitignore  Cargo.toml
crates/autopixel/src/: error.rs  lib.rs  main.rs  median_cut.rs  p5.rs  quadtree.rs  rectangle.rs
crates/blog/: Cargo.toml
crates/blog/src/: blog.rs  lib.rs  navbar.rs  page.rs
crates/markdown/: Cargo.toml
crates/markdown/src/: lib.rs  markdown.rs
crates/site/: Cargo.toml
crates/site/src/: components.rs  config.rs  main.rs  services.rs
crates/site/src/components/: pixel.rs
crates/site/src/services/: autopixel.rs  baked.rs  files.rs  markdown.rs  users.rs
markdown/: Cargo.toml
markdown/src/: blog.rs  markdown.rs
site/src/services/: baked.rs
src/: components.rs  config.rs  lib.rs  main.rs  services.rs
src/components/: blog.rs  markdown.rs  navbar.rs  page.rs  robots.rs
src/services/: baked.rs  files.rs  markdown.rs  users.rs
static/: files.js  style.css
static/autopixel/: index.html  style.css
templates/: markdown.html
