[package]
name = "mahoney-best"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.2"
actix-web = "4.3.1"
env_logger = "0.11.3"
lazy_static = "1.4.0"
log = "0.4.19"
pulldown-cmark = "0.10.2"
serde = { version = "1.0.171", features = ["derive"] }
tera = "1.19.0"
include_dir = "0.7.3"
mime_guess = "2.0.4"
tracing = "0.1.40"
