[package]
name = "mahoney-best"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11"
log = "0.4"
include_dir = "0.7"
mime_guess = "2.0"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
thiserror = "1.0"
syntect = "5.2.0"
lol_html = "1.2.1"
once_cell = "1.19.0"

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"
toml = "0.8"

maud = { version = "0.26", features = ["actix-web"] }
comrak = { version = "0.22.0", features = ["shortcodes"] }

actix-files = "0.6"
actix-web = "4.5"
actix-session = { version = "0.9", features = ["cookie-session"] }
actix-identity = "0.7"