[package]
name = "markdown"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
include_dir = "0.7"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
maud = "0.26"
lol_html = "1.2"
syntect = "5.2"
comrak = { version = "0.23", features = ["shortcodes"] }
