[package]
name = "markdown"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comrak = { version = "0.33", features = ["shortcodes"] }
include_dir = "0.7"
log = "0.4"
lol_html = "2.2"
maud = "0.26"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
syntect = "5.2"
