[package]
name = "mahoney-best"
version = "0.1.0"
edition = "2021"

[dependencies]
markdown = { path = "../markdown" }
blog = { path = "../blog" }
autopixel = { path = "../autopixel" }

actix-identity = "0.7"
actix-files = "0.6"
actix-multipart = "0.7"
actix-session = { version = "0.10", features = ["cookie-session"] }
actix-web = "4.5"
include_dir = "0.7"
futures-util = "0.3"
maud = { version = "0.26", features = ["actix-web"] }
mime_guess = "2.0"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.10"
toml = "0.8"
twox-hash = "2.1.0"
either = "1.13.0"
log = "0.4.25"
env_logger = "0.11.6"
